Implement dynamic array constructor and destructor

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,6 @@
-set(HEADERS "${PROJECT_SOURCE_DIR}/include/Lab2/Array.hpp")
+set(HEADERS
+        "${PROJECT_SOURCE_DIR}/include/Lab2/Array.hpp"
+        "${PROJECT_SOURCE_DIR}/include/Lab2/Array.inl")
 
 add_library(lab2 INTERFACE ${HEADERS})
 target_include_directories(lab2 INTERFACE "${PROJECT_SOURCE_DIR}/include")
