Add some unit tests for iterators

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,3 +21,4 @@ add_google_test(empty_array_test EmptyArrayTest.cpp)
 add_google_test(insert_test InsertTest.cpp)
 add_google_test(remove_test RemoveTest.cpp)
 add_google_test(reserve_test ReserveTest.cpp)
+add_google_test(iteration_test IterationTest.cpp)
