Add unit tests for copy and move semantics

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -22,3 +22,4 @@ add_google_test(insert_test InsertTest.cpp)
 add_google_test(remove_test RemoveTest.cpp)
 add_google_test(reserve_test ReserveTest.cpp)
 add_google_test(iteration_test IterationTest.cpp)
+add_google_test(copy_move_semantics_test CopyMoveSemanticsTest.cpp)
